# PQ-Core

./: .gitignore  Cargo.toml  README.md  roadmap.md
docs/: PHASE2_SUMMARY.md  overview.md  pq_concepts.md  protocol_flow.md  roadmap.md
examples/: demo.rs  phase2_demo.rs
src/: bidirectional.rs  lib.rs  protocol.rs
src/kem/: kem.rs  kyber.rs  mod.rs
src/math/: mod.rs  ntt.rs
src/sig/: dilithium.rs  mod.rs
tests/: intergration_test.rs  phase2_integration_test.rs
